# Prompt_eValidator_Code

./: .gitignore  .vercelignore  README.md  REPO_STRUCTURE.md  SLACK_INTEGRATION.md  TEAMS_INTEGRATION.md  extracted_docs.txt  mcp_server.py  prompt_validator.db  pyproject.toml  requirements.txt  run_sample_prompts.py  validate_result.json  vercel.json
.claude/: SETUP_MCP_FOR_TEAMMATE.md  launch.json  settings.local.json
.github/workflows/: deploy.yml
api/: index.py
app/: main.py
app/api/: routes.py
app/auth/: persona_mapping.py
app/config/: data_strategy_business_rules_source_truth.json  persona_criteria_source_truth.json  prompt_guidelines_source_truth.json  source_of_truth_extracted.json
app/core/: pricing.py  settings.py
app/db/: database.py  mongo_db.py
deploy/: Dockerfile  Dockerfile.teams-bot  Dockerfile.teams_bot  docker-compose.yml
docs/: ARCHITECTURE.md  PROMPT_VALIDATOR_DEMO_DOCUMENTATION.md  PROMPT_VALIDATOR_QUICK_REFERENCE.md  PROMPT_VALIDATOR_TECHNICAL_DOCUMENT.md  Prompt_Validator_MVP_BRD.docx  Prompt_Validator_Technical_Documentation.html  claude_build_prompt.md  prompt_validator_mvp_consolidated_report.html
examples/: sample_prompts.md
frontend/: index.html
scripts/: extract_source_truth_docx.py  start_teams_bot.sh
teams_app_manifest/: README.md  manifest.json
teams_bot/: __init__.py  agent.py  app.py  bot.py  cards.py  config.py
tests/: test_auth_and_microsoft_validation.py  test_comprehensive_suite.py  test_llm_provider_selection.py  test_prompt_suggestions_and_precision.py  test_rewrite_edge_cases.py  test_samples.md
(+54 files in other folders)
